corrected header, placed singapore weather icon on footer

--- a/flex solution/style.css
+++ b/flex solution/style.css
@@ -9,13 +9,14 @@ ul {
     color: white;
     /* border: 5px dotted red; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+    /* border-bottom: solid 25px rgba(191,191,191,.05); */
 }
 li{
-    margin: 0.5em;
-    padding: 0.5em;
-    border-left: solid 1px grey;
+    margin: 0.1em;
+    padding: 0.1em;
+    border-left: solid 1px #bfbfbf;
 }
 
 .news:hover, .news:focus {
@@ -51,21 +52,28 @@ li{
 /* main content */
 
 ul.welcome-banner{
+    width: 1250px;
+    margin-top: 50px;
+    margin-left:auto;
+    margin-right: auto;
     display:flex;
     background-color: white;
     color: black;
-    justify-content:space-around
+    justify-content: space-between;
 
    
 }
 li.welcome{
-    border-left: 0
+    border-left: 0;
+    font-weight: bold;
+    font-size: 24px;
 
 }
 li.date{
     border-left: 0;
+    font-size: 18px;
 }
-
+/* Container for the grid structure */
 .wrapper{
     margin-left:auto;
     margin-right: auto;
@@ -73,10 +81,10 @@ li.date{
     height: 600px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 25px;
+       grid-gap: 20px;
     
 }
+/* Row & Column layout of the grid */
  .r1c1 {
     grid-row: 1/2;
     grid-column: 1/3;
@@ -110,14 +118,21 @@ li.date{
     grid-row: 3/4;
     grid-column: 5/6;
 } 
+/* Singapore Weather Graphic */
+.r4c1{
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+/* Headline in the top pitcture */
 .large-bold{
     font-size: 24px;
     font-weight: 800;
 }
+/* followed by smaller text */
 .smaller-font{
     font-size: 12px
 }
-
+/* move text over the left-top picture */
 .r1c1{
     position: relative;
     display:inline-block;
@@ -133,7 +148,8 @@ li.date{
     width:70%;
     color: white;
 }
-.nav{
+/* Move the Nav bar over the top-left picture */
+.nav {
     position: absolute;
     z-index: 999;
     margin: 0 auto;
@@ -147,6 +163,36 @@ li.date{
     border-left: 1px solid  #bb1919;
     padding-left:5px;
 }
-.nav:hover{
+.nav:hover, .nav:focus{
     text-decoration: underline;
 }
+/* Nav bars under each picture denoting region or topic */
+.nav-2 {
+    text-decoration: none;
+    color: grey;
+    border-left: solid 1px #bb1919;
+    padding-left: 5px;
+}
+.nav-2:hover, nav-2:focus {
+    text-decoration: underline;
+}
+.nav-3 {
+    text-decoration: none;
+    color: grey;
+    border-left: solid 1px #f6d232;
+    padding-left: 5px;
+}
+.nav-3:hover, nav-3:focus {
+    text-decoration: underline;
+}
+/* move text beneath row2 pics in 5px */
+[class*="r2c"]>p,h2,.nav-3 {
+	
+        padding-left: 5px;
+    }
+.footer{
+    grid-row: 5/6;
+    grid-column: 1/2;
+
+}
+
